parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> print_instr
Rule 5     instruccion -> declaracion_instr
Rule 6     instruccion -> structs_instr
Rule 7     instruccion -> asignacion_instr
Rule 8     instruccion -> declaracion_asignacion_instr
Rule 9     instruccion -> llamadaFuncion_instr
Rule 10    instruccion -> funcion_instr
Rule 11    instruccion -> if_instr
Rule 12    instruccion -> while_instr
Rule 13    instruccion -> for_instr
Rule 14    instruccion -> break_instr
Rule 15    instruccion -> continue_instr
Rule 16    instruccion -> return_instr
Rule 17    instruccion -> error PUNTOYCOMA
Rule 18    print_instr -> PRINTLN PARIZQ expresiones PARDER PUNTOYCOMA
Rule 19    print_instr -> PRINT PARIZQ expresiones PARDER PUNTOYCOMA
Rule 20    declaracion_instr -> LOCAL ID IGUAL expresion PUNTOYCOMA
Rule 21    declaracion_instr -> GLOBAL ID IGUAL expresion PUNTOYCOMA
Rule 22    declaracion_instr -> LOCAL ID PUNTOYCOMA
Rule 23    declaracion_instr -> GLOBAL ID PUNTOYCOMA
Rule 24    structs_instr -> STRUCT ID struct_variables END PUNTOYCOMA
Rule 25    structs_instr -> MUTABLE STRUCT ID struct_variables END PUNTOYCOMA
Rule 26    struct_variables -> struct_variables struct_variable
Rule 27    struct_variables -> struct_variable
Rule 28    struct_variable -> ID DOSPUNTOSDOSPUNTOS tipoDato PUNTOYCOMA
Rule 29    struct_variable -> ID PUNTOYCOMA
Rule 30    asignacion_instr -> expresion IGUAL expresion PUNTOYCOMA
Rule 31    declaracion_asignacion_instr -> ID IGUAL expresion DOSPUNTOSDOSPUNTOS tipoDato PUNTOYCOMA
Rule 32    llamadaFuncion_instr -> ID PARIZQ expresiones PARDER PUNTOYCOMA
Rule 33    funcion_instr -> FUNCTION ID PARIZQ parametros PARDER instrucciones END PUNTOYCOMA
Rule 34    parametros -> parametros COMA parametro
Rule 35    parametros -> parametro
Rule 36    parametro -> ID DOSPUNTOSDOSPUNTOS tipoDato
Rule 37    parametro -> ID
Rule 38    if_instr -> IF expresion instrucciones END PUNTOYCOMA
Rule 39    if_instr -> IF expresion instrucciones elseifs ELSE instrucciones END PUNTOYCOMA
Rule 40    if_instr -> IF expresion instrucciones ELSE instrucciones END PUNTOYCOMA
Rule 41    elseifs -> elseifs COMA elseif_instr
Rule 42    elseifs -> elseif_instr
Rule 43    elseif_instr -> ELSEIF expresion instrucciones
Rule 44    while_instr -> WHILE expresion instrucciones END PUNTOYCOMA
Rule 45    for_instr -> FOR ID IN for_instr_opciones instrucciones END PUNTOYCOMA
Rule 46    for_instr_opciones -> expresion DOSPUNTOS expresion
Rule 47    for_instr_opciones -> expresion
Rule 48    break_instr -> BREAK PUNTOYCOMA
Rule 49    return_instr -> RETURN expresion PUNTOYCOMA
Rule 50    continue_instr -> CONTINUE PUNTOYCOMA
Rule 51    expresiones -> expresiones COMA expresion
Rule 52    expresiones -> expresion
Rule 53    expresion -> expresion MAS expresion
Rule 54    expresion -> expresion MENOS expresion
Rule 55    expresion -> expresion POR expresion
Rule 56    expresion -> expresion DIV expresion
Rule 57    expresion -> expresion POTENCIA expresion
Rule 58    expresion -> expresion MODULO expresion
Rule 59    expresion -> expresion MAYOR expresion
Rule 60    expresion -> expresion MENOR expresion
Rule 61    expresion -> expresion MAYORIGUAL expresion
Rule 62    expresion -> expresion MENORIGUAL expresion
Rule 63    expresion -> expresion IGUALIGUAL expresion
Rule 64    expresion -> expresion DIFERENTE expresion
Rule 65    expresion -> expresion OR expresion
Rule 66    expresion -> expresion AND expresion
Rule 67    expresion -> MENOS expresion
Rule 68    expresion -> NOT expresion
Rule 69    expresion -> DECIMAL
Rule 70    expresion -> ENTERO
Rule 71    expresion -> CARACTER
Rule 72    expresion -> CADENA
Rule 73    expresion -> TRUE
Rule 74    expresion -> FALSE
Rule 75    expresion -> NULO
Rule 76    expresion -> SQRT PARIZQ expresion PARDER
Rule 77    expresion -> TAN PARIZQ expresion PARDER
Rule 78    expresion -> COS PARIZQ expresion PARDER
Rule 79    expresion -> SIN PARIZQ expresion PARDER
Rule 80    expresion -> LOG PARIZQ expresion COMA expresion PARDER
Rule 81    expresion -> LOG10 PARIZQ expresion PARDER
Rule 82    expresion -> PARSE PARIZQ tipoDato COMA expresion PARDER
Rule 83    expresion -> TRUNC PARIZQ tipoDato COMA expresion PARDER
Rule 84    expresion -> FLOAT PARIZQ expresion PARDER
Rule 85    expresion -> STRING PARIZQ expresion PARDER
Rule 86    expresion -> TYPEOF PARIZQ expresion PARDER
Rule 87    expresion -> PUSH NOT PARIZQ expresion COMA expresion PARDER
Rule 88    expresion -> POP NOT PARIZQ expresion PARDER
Rule 89    expresion -> LENGTH PARIZQ expresion PARDER
Rule 90    expresion -> UPPERCASE PARIZQ expresion PARDER
Rule 91    expresion -> LOWERCASE PARIZQ expresion PARDER
Rule 92    expresion -> CORIZQ expresion DOSPUNTOS expresion CORDER
Rule 93    expresion -> CORIZQ expresiones CORDER
Rule 94    expresion -> PARIZQ expresiones PARDER
Rule 95    expresion -> expresion PUNTO expresion
Rule 96    expresion -> ID PARIZQ expresiones PARDER
Rule 97    expresion -> ID expresion
Rule 98    expresion -> ID
Rule 99    tipoDato -> NULO
Rule 100   tipoDato -> FLOAT64
Rule 101   tipoDato -> INT64
Rule 102   tipoDato -> BOOL
Rule 103   tipoDato -> CHAR
Rule 104   tipoDato -> STRING
Rule 105   tipoDato -> ID

Terminals, with rules where they appear

AND                  : 66
BOOL                 : 102
BREAK                : 48
CADENA               : 72
CARACTER             : 71
CHAR                 : 103
COMA                 : 34 41 51 80 82 83 87
CONTINUE             : 50
CORDER               : 92 93
CORIZQ               : 92 93
COS                  : 78
DECIMAL              : 69
DIFERENTE            : 64
DIV                  : 56
DOSPUNTOS            : 46 92
DOSPUNTOSDOSPUNTOS   : 28 31 36
ELSE                 : 39 40
ELSEIF               : 43
END                  : 24 25 33 38 39 40 44 45
ENTERO               : 70
FALSE                : 74
FLOAT                : 84
FLOAT64              : 100
FOR                  : 45
FUNCTION             : 33
GLOBAL               : 21 23
ID                   : 20 21 22 23 24 25 28 29 31 32 33 36 37 45 96 97 98 105
IF                   : 38 39 40
IGUAL                : 20 21 30 31
IGUALIGUAL           : 63
IN                   : 45
INT64                : 101
LENGTH               : 89
LOCAL                : 20 22
LOG                  : 80
LOG10                : 81
LOWERCASE            : 91
MAS                  : 53
MAYOR                : 59
MAYORIGUAL           : 61
MENOR                : 60
MENORIGUAL           : 62
MENOS                : 54 67
MODULO               : 58
MUTABLE              : 25
NOT                  : 68 87 88
NULO                 : 75 99
OR                   : 65
PARDER               : 18 19 32 33 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 94 96
PARIZQ               : 18 19 32 33 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 94 96
PARSE                : 82
POP                  : 88
POR                  : 55
POTENCIA             : 57
PRINT                : 19
PRINTLN              : 18
PUNTO                : 95
PUNTOYCOMA           : 17 18 19 20 21 22 23 24 25 28 29 30 31 32 33 38 39 40 44 45 48 49 50
PUSH                 : 87
RETURN               : 49
SIN                  : 79
SQRT                 : 76
STRING               : 85 104
STRUCT               : 24 25
TAN                  : 77
TRUE                 : 73
TRUNC                : 83
TYPEOF               : 86
UPPERCASE            : 90
WHILE                : 44
error                : 17

Nonterminals, with rules where they appear

asignacion_instr     : 7
break_instr          : 14
continue_instr       : 15
declaracion_asignacion_instr : 8
declaracion_instr    : 5
elseif_instr         : 41 42
elseifs              : 39 41
expresion            : 20 21 30 30 31 38 39 40 43 44 46 46 47 49 51 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 68 76 77 78 79 80 80 81 82 83 84 85 86 87 87 88 89 90 91 92 92 95 95 97
expresiones          : 18 19 32 51 93 94 96
for_instr            : 13
for_instr_opciones   : 45
funcion_instr        : 10
if_instr             : 11
inicio               : 0
instruccion          : 2 3
instrucciones        : 1 2 33 38 39 39 40 40 43 44 45
llamadaFuncion_instr : 9
parametro            : 34 35
parametros           : 33 34
print_instr          : 4
return_instr         : 16
struct_variable      : 26 27
struct_variables     : 24 25 26
structs_instr        : 6
tipoDato             : 28 31 36 82 83
while_instr          : 12

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . print_instr
    (5) instruccion -> . declaracion_instr
    (6) instruccion -> . structs_instr
    (7) instruccion -> . asignacion_instr
    (8) instruccion -> . declaracion_asignacion_instr
    (9) instruccion -> . llamadaFuncion_instr
    (10) instruccion -> . funcion_instr
    (11) instruccion -> . if_instr
    (12) instruccion -> . while_instr
    (13) instruccion -> . for_instr
    (14) instruccion -> . break_instr
    (15) instruccion -> . continue_instr
    (16) instruccion -> . return_instr
    (17) instruccion -> . error PUNTOYCOMA
    (18) print_instr -> . PRINTLN PARIZQ expresiones PARDER PUNTOYCOMA
    (19) print_instr -> . PRINT PARIZQ expresiones PARDER PUNTOYCOMA
    (20) declaracion_instr -> . LOCAL ID IGUAL expresion PUNTOYCOMA
    (21) declaracion_instr -> . GLOBAL ID IGUAL expresion PUNTOYCOMA
    (22) declaracion_instr -> . LOCAL ID PUNTOYCOMA
    (23) declaracion_instr -> . GLOBAL ID PUNTOYCOMA
    (24) structs_instr -> . STRUCT ID struct_variables END PUNTOYCOMA
    (25) structs_instr -> . MUTABLE STRUCT ID struct_variables END PUNTOYCOMA
    (30) asignacion_instr -> . expresion IGUAL expresion PUNTOYCOMA
    (31) declaracion_asignacion_instr -> . ID IGUAL expresion DOSPUNTOSDOSPUNTOS tipoDato PUNTOYCOMA
    (32) llamadaFuncion_instr -> . ID PARIZQ expresiones PARDER PUNTOYCOMA
    (33) funcion_instr -> . FUNCTION ID PARIZQ parametros PARDER instrucciones END PUNTOYCOMA
    (38) if_instr -> . IF expresion instrucciones END PUNTOYCOMA
    (39) if_instr -> . IF expresion instrucciones elseifs ELSE instrucciones END PUNTOYCOMA
    (40) if_instr -> . IF expresion instrucciones ELSE instrucciones END PUNTOYCOMA
    (44) while_instr -> . WHILE expresion instrucciones END PUNTOYCOMA
    (45) for_instr -> . FOR ID IN for_instr_opciones instrucciones END PUNTOYCOMA
    (48) break_instr -> . BREAK PUNTOYCOMA
    (50) continue_instr -> . CONTINUE PUNTOYCOMA
    (49) return_instr -> . RETURN expresion PUNTOYCOMA
    (53) expresion -> . expresion MAS expresion
    (54) expresion -> . expresion MENOS expresion
    (55) expresion -> . expresion POR expresion
    (56) expresion -> . expresion DIV expresion
    (57) expresion -> . expresion POTENCIA expresion
    (58) expresion -> . expresion MODULO expresion
    (59) expresion -> . expresion MAYOR expresion
    (60) expresion -> . expresion MENOR expresion
    (61) expresion -> . expresion MAYORIGUAL expresion
    (62) expresion -> . expresion MENORIGUAL expresion
    (63) expresion -> . expresion IGUALIGUAL expresion
    (64) expresion -> . expresion DIFERENTE expresion
    (65) expresion -> . expresion OR expresion
    (66) expresion -> . expresion AND expresion
    (67) expresion -> . MENOS expresion
    (68) expresion -> . NOT expresion
    (69) expresion -> . DECIMAL
    (70) expresion -> . ENTERO
    (71) expresion -> . CARACTER
    (72) expresion -> . CADENA
    (73) expresion -> . TRUE
    (74) expresion -> . FALSE
    (75) expresion -> . NULO
    (76) expresion -> . SQRT PARIZQ expresion PARDER
    (77) expresion -> . TAN PARIZQ expresion PARDER
    (78) expresion -> . COS PARIZQ expresion PARDER
    (79) expresion -> . SIN PARIZQ expresion PARDER
    (80) expresion -> . LOG PARIZQ expresion COMA expresion PARDER
    (81) expresion -> . LOG10 PARIZQ expresion PARDER
    (82) expresion -> . PARSE PARIZQ tipoDato COMA expresion PARDER
    (83) expresion -> . TRUNC PARIZQ tipoDato COMA expresion PARDER
    (84) expresion -> . FLOAT PARIZQ expresion PARDER
    (85) expresion -> . STRING PARIZQ expresion PARDER
    (86) expresion -> . TYPEOF PARIZQ expresion PARDER
    (87) expresion -> . PUSH NOT PARIZQ expresion COMA expresion PARDER
    (88) expresion -> . POP NOT PARIZQ expresion PARDER
    (89) expresion -> . LENGTH PARIZQ expresion PARDER
    (90) expresion -> . UPPERCASE PARIZQ expresion PARDER
    (91) expresion -> . LOWERCASE PARIZQ expresion PARDER
    (92) expresion -> . CORIZQ expresion DOSPUNTOS expresion CORDER
    (93) expresion -> . CORIZQ expresiones CORDER
    (94) expresion -> . PARIZQ expresiones PARDER
    (95) expresion -> . expresion PUNTO expresion
    (96) expresion -> . ID PARIZQ expresiones PARDER
    (97) expresion -> . ID expresion
    (98) expresion -> . ID

    error           shift and go to state 17
    PRINTLN         shift and go to state 18
    PRINT           shift and go to state 20
    LOCAL           shift and go to state 21
    GLOBAL          shift and go to state 24
    STRUCT          shift and go to state 25
    MUTABLE         shift and go to state 26
    ID              shift and go to state 22
    FUNCTION        shift and go to state 27
    IF              shift and go to state 28
    WHILE           shift and go to state 29
    FOR             shift and go to state 30
    BREAK           shift and go to state 31
    CONTINUE        shift and go to state 32
    RETURN          shift and go to state 33
    MENOS           shift and go to state 34
    NOT             shift and go to state 35
    DECIMAL         shift and go to state 36
    ENTERO          shift and go to state 37
    CARACTER        shift and go to state 38
    CADENA          shift and go to state 39
    TRUE            shift and go to state 40
    FALSE           shift and go to state 41
    NULO            shift and go to state 42
    SQRT            shift and go to state 43
    TAN             shift and go to state 44
    COS             shift and go to state 45
    SIN             shift and go to state 46
    LOG             shift and go to state 47
    LOG10           shift and go to state 48
    PARSE           shift and go to state 49
    TRUNC           shift and go to state 50
    FLOAT           shift and go to state 51
    STRING          shift and go to state 52
    TYPEOF          shift and go to state 53
    PUSH            shift and go to state 54
    POP             shift and go to state 55
    LENGTH          shift and go to state 56
    UPPERCASE       shift and go to state 57
    LOWERCASE       shift and go to state 58
    CORIZQ          shift and go to state 59
    PARIZQ          shift and go to state 19

    inicio                         shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    print_instr                    shift and go to state 4
    declaracion_instr              shift and go to state 5
    structs_instr                  shift and go to state 6
    asignacion_instr               shift and go to state 7
    declaracion_asignacion_instr   shift and go to state 8
    llamadaFuncion_instr           shift and go to state 9
    funcion_instr                  shift and go to state 10
    if_instr                       shift and go to state 11
    while_instr                    shift and go to state 12
    for_instr                      shift and go to state 13
    break_instr                    shift and go to state 14
    continue_instr                 shift and go to state 15
    return_instr                   shift and go to state 16
    expresion                      shift and go to state 23

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . print_instr
    (5) instruccion -> . declaracion_instr
    (6) instruccion -> . structs_instr
    (7) instruccion -> . asignacion_instr
    (8) instruccion -> . declaracion_asignacion_instr
    (9) instruccion -> . llamadaFuncion_instr
    (10) instruccion -> . funcion_instr
    (11) instruccion -> . if_instr
    (12) instruccion -> . while_instr
    (13) instruccion -> . for_instr
    (14) instruccion -> . break_instr
    (15) instruccion -> . continue_instr
    (16) instruccion -> . return_instr
    (17) instruccion -> . error PUNTOYCOMA
    (18) print_instr -> . PRINTLN PARIZQ expresiones PARDER PUNTOYCOMA
    (19) print_instr -> . PRINT PARIZQ expresiones PARDER PUNTOYCOMA
    (20) declaracion_instr -> . LOCAL ID IGUAL expresion PUNTOYCOMA
    (21) declaracion_instr -> . GLOBAL ID IGUAL expresion PUNTOYCOMA
    (22) declaracion_instr -> . LOCAL ID PUNTOYCOMA
    (23) declaracion_instr -> . GLOBAL ID PUNTOYCOMA
    (24) structs_instr -> . STRUCT ID struct_variables END PUNTOYCOMA
    (25) structs_instr -> . MUTABLE STRUCT ID struct_variables END PUNTOYCOMA
    (30) asignacion_instr -> . expresion IGUAL expresion PUNTOYCOMA
    (31) declaracion_asignacion_instr -> . ID IGUAL expresion DOSPUNTOSDOSPUNTOS tipoDato PUNTOYCOMA
    (32) llamadaFuncion_instr -> . ID PARIZQ expresiones PARDER PUNTOYCOMA
    (33) funcion_instr -> . FUNCTION ID PARIZQ parametros PARDER instrucciones END PUNTOYCOMA
    (38) if_instr -> . IF expresion instrucciones END PUNTOYCOMA
    (39) if_instr -> . IF expresion instrucciones elseifs ELSE instrucciones END PUNTOYCOMA
    (40) if_instr -> . IF expresion instrucciones ELSE instrucciones END PUNTOYCOMA
    (44) while_instr -> . WHILE expresion instrucciones END PUNTOYCOMA
    (45) for_instr -> . FOR ID IN for_instr_opciones instrucciones END PUNTOYCOMA
    (48) break_instr -> . BREAK PUNTOYCOMA
    (50) continue_instr -> . CONTINUE PUNTOYCOMA
    (49) return_instr -> . RETURN expresion PUNTOYCOMA
    (53) expresion -> . expresion MAS expresion
    (54) expresion -> . expresion MENOS expresion
    (55) expresion -> . expresion POR expresion
    (56) expresion -> . expresion DIV expresion
    (57) expresion -> . expresion POTENCIA expresion
    (58) expresion -> . expresion MODULO expresion
    (59) expresion -> . expresion MAYOR expresion
    (60) expresion -> . expresion MENOR expresion
    (61) expresion -> . expresion MAYORIGUAL expresion
    (62) expresion -> . expresion MENORIGUAL expresion
    (63) expresion -> . expresion IGUALIGUAL expresion
    (64) expresion -> . expresion DIFERENTE expresion
    (65) expresion -> . expresion OR expresion
    (66) expresion -> . expresion AND expresion
    (67) expresion -> . MENOS expresion
    (68) expresion -> . NOT expresion
    (69) expresion -> . DECIMAL
    (70) expresion -> . ENTERO
    (71) expresion -> . CARACTER
    (72) expresion -> . CADENA
    (73) expresion -> . TRUE
    (74) expresion -> . FALSE
    (75) expresion -> . NULO
    (76) expresion -> . SQRT PARIZQ expresion PARDER
    (77) expresion -> . TAN PARIZQ expresion PARDER
    (78) expresion -> . COS PARIZQ expresion PARDER
    (79) expresion -> . SIN PARIZQ expresion PARDER
    (80) expresion -> . LOG PARIZQ expresion COMA expresion PARDER
    (81) expresion -> . LOG10 PARIZQ expresion PARDER
    (82) expresion -> . PARSE PARIZQ tipoDato COMA expresion PARDER
    (83) expresion -> . TRUNC PARIZQ tipoDato COMA expresion PARDER
    (84) expresion -> . FLOAT PARIZQ expresion PARDER
    (85) expresion -> . STRING PARIZQ expresion PARDER
    (86) expresion -> . TYPEOF PARIZQ expresion PARDER
    (87) expresion -> . PUSH NOT PARIZQ expresion COMA expresion PARDER
    (88) expresion -> . POP NOT PARIZQ expresion PARDER
    (89) expresion -> . LENGTH PARIZQ expresion PARDER
    (90) expresion -> . UPPERCASE PARIZQ expresion PARDER
    (91) expresion -> . LOWERCASE PARIZQ expresion PARDER
    (92) expresion -> . CORIZQ expresion DOSPUNTOS expresion CORDER
    (93) expresion -> . CORIZQ expresiones CORDER
    (94) expresion -> . PARIZQ expresiones PARDER
    (95) expresion -> . expresion PUNTO expresion
    (96) expresion -> . ID PARIZQ expresiones PARDER
    (97) expresion -> . ID expresion
    (98) expresion -> . ID

    $end            reduce using rule 1 (inicio -> instrucciones .)
    error           shift and go to state 17
    PRINTLN         shift and go to state 18
    PRINT           shift and go to state 20
    LOCAL           shift and go to state 21
    GLOBAL          shift and go to state 24
    STRUCT          shift and go to state 25
    MUTABLE         shift and go to state 26
    ID              shift and go to state 22
    FUNCTION        shift and go to state 27
    IF              shift and go to state 28
    WHILE           shift and go to state 29
    FOR             shift and go to state 30
    BREAK           shift and go to state 31
    CONTINUE        shift and go to state 32
    RETURN          shift and go to state 33
    MENOS           shift and go to state 34
    NOT             shift and go to state 35
    DECIMAL         shift and go to state 36
    ENTERO          shift and go to state 37
    CARACTER        shift and go to state 38
    CADENA          shift and go to state 39
    TRUE            shift and go to state 40
    FALSE           shift and go to state 41
    NULO            shift and go to state 42
    SQRT            shift and go to state 43
    TAN             shift and go to state 44
    COS             shift and go to state 45
    SIN             shift and go to state 46
    LOG             shift and go to state 47
    LOG10           shift and go to state 48
    PARSE           shift and go to state 49
    TRUNC           shift and go to state 50
    FLOAT           shift and go to state 51
    STRING          shift and go to state 52
    TYPEOF          shift and go to state 53
    PUSH            shift and go to state 54
    POP             shift and go to state 55
    LENGTH          shift and go to state 56
    UPPERCASE       shift and go to state 57
    LOWERCASE       shift and go to state 58
    CORIZQ          shift and go to state 59
    PARIZQ          shift and go to state 19

    instruccion                    shift and go to state 60
    print_instr                    shift and go to state 4
    declaracion_instr              shift and go to state 5
    structs_instr                  shift and go to state 6
    asignacion_instr               shift and go to state 7
    declaracion_asignacion_instr   shift and go to state 8
    llamadaFuncion_instr           shift and go to state 9
    funcion_instr                  shift and go to state 10
    if_instr                       shift and go to state 11
    while_instr                    shift and go to state 12
    for_instr                      shift and go to state 13
    break_instr                    shift and go to state 14
    continue_instr                 shift and go to state 15
    return_instr                   shift and go to state 16
    expresion                      shift and go to state 23

state 3

    (3) instrucciones -> instruccion .

    error           reduce using rule 3 (instrucciones -> instruccion .)
    PRINTLN         reduce using rule 3 (instrucciones -> instruccion .)
    PRINT           reduce using rule 3 (instrucciones -> instruccion .)
    LOCAL           reduce using rule 3 (instrucciones -> instruccion .)
    GLOBAL          reduce using rule 3 (instrucciones -> instruccion .)
    STRUCT          reduce using rule 3 (instrucciones -> instruccion .)
    MUTABLE         reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    FUNCTION        reduce using rule 3 (instrucciones -> instruccion .)
    IF              reduce using rule 3 (instrucciones -> instruccion .)
    WHILE           reduce using rule 3 (instrucciones -> instruccion .)
    FOR             reduce using rule 3 (instrucciones -> instruccion .)
    BREAK           reduce using rule 3 (instrucciones -> instruccion .)
    CONTINUE        reduce using rule 3 (instrucciones -> instruccion .)
    RETURN          reduce using rule 3 (instrucciones -> instruccion .)
    MENOS           reduce using rule 3 (instrucciones -> instruccion .)
    NOT             reduce using rule 3 (instrucciones -> instruccion .)
    DECIMAL         reduce using rule 3 (instrucciones -> instruccion .)
    ENTERO          reduce using rule 3 (instrucciones -> instruccion .)
    CARACTER        reduce using rule 3 (instrucciones -> instruccion .)
    CADENA          reduce using rule 3 (instrucciones -> instruccion .)
    TRUE            reduce using rule 3 (instrucciones -> instruccion .)
    FALSE           reduce using rule 3 (instrucciones -> instruccion .)
    NULO            reduce using rule 3 (instrucciones -> instruccion .)
    SQRT            reduce using rule 3 (instrucciones -> instruccion .)
    TAN             reduce using rule 3 (instrucciones -> instruccion .)
    COS             reduce using rule 3 (instrucciones -> instruccion .)
    SIN             reduce using rule 3 (instrucciones -> instruccion .)
    LOG             reduce using rule 3 (instrucciones -> instruccion .)
    LOG10           reduce using rule 3 (instrucciones -> instruccion .)
    PARSE           reduce using rule 3 (instrucciones -> instruccion .)
    TRUNC           reduce using rule 3 (instrucciones -> instruccion .)
    FLOAT           reduce using rule 3 (instrucciones -> instruccion .)
    STRING          reduce using rule 3 (instrucciones -> instruccion .)
    TYPEOF          reduce using rule 3 (instrucciones -> instruccion .)
    PUSH            reduce using rule 3 (instrucciones -> instruccion .)
    POP             reduce using rule 3 (instrucciones -> instruccion .)
    LENGTH          reduce using rule 3 (instrucciones -> instruccion .)
    UPPERCASE       reduce using rule 3 (instrucciones -> instruccion .)
    LOWERCASE       reduce using rule 3 (instrucciones -> instruccion .)
    CORIZQ          reduce using rule 3 (instrucciones -> instruccion .)
    PARIZQ          reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    END             reduce using rule 3 (instrucciones -> instruccion .)
    ELSE            reduce using rule 3 (instrucciones -> instruccion .)
    ELSEIF          reduce using rule 3 (instrucciones -> instruccion .)
    COMA            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> print_instr .

    error           reduce using rule 4 (instruccion -> print_instr .)
    PRINTLN         reduce using rule 4 (instruccion -> print_instr .)
    PRINT           reduce using rule 4 (instruccion -> print_instr .)
    LOCAL           reduce using rule 4 (instruccion -> print_instr .)
    GLOBAL          reduce using rule 4 (instruccion -> print_instr .)
    STRUCT          reduce using rule 4 (instruccion -> print_instr .)
    MUTABLE         reduce using rule 4 (instruccion -> print_instr .)
    ID              reduce using rule 4 (instruccion -> print_instr .)
    FUNCTION        reduce using rule 4 (instruccion -> print_instr .)
    IF              reduce using rule 4 (instruccion -> print_instr .)
    WHILE           reduce using rule 4 (instruccion -> print_instr .)
    FOR             reduce using rule 4 (instruccion -> print_instr .)
    BREAK           reduce using rule 4 (instruccion -> print_instr .)
    CONTINUE        reduce using rule 4 (instruccion -> print_instr .)
    RETURN          reduce using rule 4 (instruccion -> print_instr .)
    MENOS           reduce using rule 4 (instruccion -> print_instr .)
    NOT             reduce using rule 4 (instruccion -> print_instr .)
    DECIMAL         reduce using rule 4 (instruccion -> print_instr .)
    ENTERO          reduce using rule 4 (instruccion -> print_instr .)
    CARACTER        reduce using rule 4 (instruccion -> print_instr .)
    CADENA          reduce using rule 4 (instruccion -> print_instr .)
    TRUE            reduce using rule 4 (instruccion -> print_instr .)
    FALSE           reduce using rule 4 (instruccion -> print_instr .)
    NULO            reduce using rule 4 (instruccion -> print_instr .)
    SQRT            reduce using rule 4 (instruccion -> print_instr .)
    TAN             reduce using rule 4 (instruccion -> print_instr .)
    COS             reduce using rule 4 (instruccion -> print_instr .)
    SIN             reduce using rule 4 (instruccion -> print_instr .)
    LOG             reduce using rule 4 (instruccion -> print_instr .)
    LOG10           reduce using rule 4 (instruccion -> print_instr .)
    PARSE           reduce using rule 4 (instruccion -> print_instr .)
    TRUNC           reduce using rule 4 (instruccion -> print_instr .)
    FLOAT           reduce using rule 4 (instruccion -> print_instr .)
    STRING          reduce using rule 4 (instruccion -> print_instr .)
    TYPEOF          reduce using rule 4 (instruccion -> print_instr .)
    PUSH            reduce using rule 4 (instruccion -> print_instr .)
    POP             reduce using rule 4 (instruccion -> print_instr .)
    LENGTH          reduce using rule 4 (instruccion -> print_instr .)
    UPPERCASE       reduce using rule 4 (instruccion -> print_instr .)
    LOWERCASE       reduce using rule 4 (instruccion -> print_instr .)
    CORIZQ          reduce using rule 4 (instruccion -> print_instr .)
    PARIZQ          reduce using rule 4 (instruccion -> print_instr .)
    $end            reduce using rule 4 (instruccion -> print_instr .)
    END             reduce using rule 4 (instruccion -> print_instr .)
    ELSE            reduce using rule 4 (instruccion -> print_instr .)
    ELSEIF          reduce using rule 4 (instruccion -> print_instr .)
    COMA            reduce using rule 4 (instruccion -> print_instr .)


state 5

    (5) instruccion -> declaracion_instr .
